--- a/style.css
+++ b/style.css
@@ -37,8 +37,14 @@ button:hover{
     background-color: #48cea2;
     border: none;
     color: #245e4a;
-
-
 }
+@media screen and (max-width: 768px) {
+    body{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background-color: #f5f5f59c;
+    }
+}
+
 
 
