--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@
         background-color: #245e4a;
         color: #ffffff;
         border: none;
-        transition: 0.3s;
+        transition: all 0.3s;
     }
 button:hover{
     background-color: #48cea2;
